[package]
name = "moyn"
version = "0.1.1"
edition = "2024"
description = "Developer microblogging from your terminal"
homepage = "https://moyn.dev"
repository = "https://github.com/moyn-dev/moyn-cli"
license = "MIT"
readme = "README.md"
keywords = ["cli", "microblog", "markdown", "developer"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dirs = "6.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Better optimization (slower compile)
panic = "abort"     # Smaller binary, no unwinding
strip = true        # Strip symbols

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
